--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Swapnil Dwivedi</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="https://www.linkedin.com/in/swapnil-dwivedi-8b9032252/">Hire me</a>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
                         I make up for with my determination to learn.</p><br
                         <p>Date of birth: 1 March 2004     Email: swapd@gmail.com<br>
                         Phone: +91 91187 11945     Location: G1/175 Armapur Kanpur,UP</p>
-                    <a href="#">Download CV</a>
+                    <a href="https://drive.google.com/file/d/13Rx7Lh3HYt7W3UESyOhAPjcA0V_R6Tx3/view?usp=drive_link">Download CV</a>
                 </div>
             </div>
         </div>
@@ -78,8 +78,9 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <div class="text">Simple Calculater</div>
-                        <p>Project was created using HTML CSS and JAVASCIRPT to perform basic calculation .</p>
+                        <div class="text">House-rent Predictor</div>
+                        <p>Project was created using Pandas Scikit and Matplot to perform Predict the rent of house in California.</p>
+                        <a href="https://github.com/OG-swapnil/House_rent-prediction">Source</a>
                     </div>
                 </div>
                 <div class="card">
@@ -87,6 +88,7 @@
                         <i class="fas fa-code"></i>
                         <div class="text">Volume Controller</div>
                         <p>OpenCV-CV2 Pyautogui and mediapipe is used in this project. To control volume</p>
+                        <a href="https://github.com/OG-swapnil/VolumeControler">Source</a>
                     </div>
                 </div>
                 <div class="card">
@@ -94,6 +96,7 @@
                         <i class="fas fa-code"></i>
                         <div class="text">Traffic Security Camera</div>
                         <p>Used Text OCR to scan the number plate of any vehical. Used mysql as database.</p>
+                        <a href="https://github.com/OG-swapnil/TrafficSecurity.github.io">Source</a>
                     </div>
                 </div>
                </div>
@@ -213,7 +216,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://www.codingnepalweb.com">Swapnil Dwivedi</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
+        <span>Created By <a href="https://github.com/OG-swapnil">Swapnil Dwivedi</a> | <span class="far fa-copyright"></span> 2023 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
